--- a/Prototype/Views/Shared/_Layout.cshtml
+++ b/Prototype/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Looneta", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Reclamacoes", "Index","Reclamacao")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
