--- a/Prototype/Views/Reclamacao/Details.cshtml
+++ b/Prototype/Views/Reclamacao/Details.cshtml
@@ -11,6 +11,22 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Titulo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Titulo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Descricao)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Descricao)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.DataDoAContecimento)
         </dt>
 
@@ -49,6 +65,14 @@
         <dd>
             @Html.DisplayFor(model => model.VotosNegativos)
         </dd>
+        <dt>
+            Comentários:
+        </dt>
+        @foreach (Prototype.Models.Comentario com in Model.Comentarios) {
+        <dd>
+            @com.Descricao
+        </dd>
+        }
 
     </dl>
 </div>
