--- a/Prototype/Views/Reclamacao/Index.cshtml
+++ b/Prototype/Views/Reclamacao/Index.cshtml
@@ -13,6 +13,12 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Titulo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Descricao)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.DataDoAContecimento)
         </th>
         <th>
@@ -32,6 +38,12 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Titulo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Descricao)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.DataDoAContecimento)
         </td>
