Progresso nas Reclamações.

--- a/Prototype/Views/Home/Index.cshtml
+++ b/Prototype/Views/Home/Index.cshtml
@@ -2,16 +2,14 @@
     ViewBag.Title = "Home Page";
 }
 
-<body class="geral">
-    <div class="jumbotron texto">
+<body>
+    <div class="jumbotron texto-centrado">
 
         <h2>Looneta</h2>
 
-        <div>
-            <p>
-                Bem-Vindo ao Looneta. <br /> Looneta é um site que permite você visualizar reclamações e comentar nelas.
-            </p>
-        </div>
+        <p>
+            Bem-Vindo ao Looneta. <br /> Looneta é um site que permite você visualizar reclamações e comentar nelas.
+        </p>
 
         <!--LOGIN-->
 
