--- a/Prototype/Views/Reclamacao/Index.cshtml
+++ b/Prototype/Views/Reclamacao/Index.cshtml
@@ -6,7 +6,9 @@
 }
 
 <style>
-    
+    .tags{
+        font-size: 12px;
+    }
 </style>
 
 <h2>Reclamações</h2>
@@ -15,7 +17,7 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-<div class="jumbotron texto container row">
+<div class="jumbotron texto">
     <!--<table class="table-hover">-->
     <!--
     <tr>
@@ -91,16 +93,25 @@
         </tr>
         -->
         <div>
-            <h3>@Html.DisplayFor(modelItem => item.Titulo) </h3>
+            <h3><u>@Html.DisplayFor(modelItem => item.Titulo)</u></h3>
 
-            <p>@Html.DisplayFor(modelItem => item.Endereco)</p>
+            <div class="row">
+                <div class="col-md-10">
+                    <p class="col-md-offset-0">@Html.DisplayFor(modelItem => item.Endereco) 
+                        <span class="tags col-md-offset-5">Votos Positivos: @Html.DisplayFor(modelItem => item.VotosPositivos) 
+                                                           Votos Negativos: @Html.DisplayFor(modelItem => item.VotosNegativos)</span>
+                        
+                    </p>
+                    
+                </div>
+            </div>
 
             <div>
                 <textarea readonly="readonly"  style="background-color:inherit; color:white; ">@Html.DisplayFor(modelItem => item.Descricao)</textarea>
             </div>
             <img src="https://oslimpatrilhos.files.wordpress.com/2010/06/buracos-na-ucranea-diferente.jpg" class="img-responsive" style="height:auto" />
 
-
+            
             <hr /><br /><br />
 
         </div>
